    bundles that Apple has added to gcc for linking.

  - Use more appropriate default search lists of linkers, compilers and
    and other tools for the 'darwin' platform.

  - Add a LoadableModule Builder that builds a bundle on Mac OS X (Darwin)
    and a shared library on other systems.

  - Improve SWIG tests for use on Mac OS X (Darwin).

  From Georg Mischler:

  - Remove the space after the -o option when invoking the Borland
    BCC compiler; some versions apparently require that the file name
    argument be concatenated with the option.

  From Elliot Murphy:

  - Enhance the tests to guarantee persistence of ListOption
    values in saved options files.

  - Supply the help text when -h is used with the -u, -U or -D options.

  From Leanid Nazdrynau:

  - Fix the Java parser's handling of backslashes in strings.

  From Christian Neeb:

  - Fix the Java parser's handling of string definitions to avoid ignoring
    subsequent code.

  From Han-Wen Nienhuys:

  - Optimize variable expansion by:  using the re.sub() method (when
    possible); not using "eval" for variables for which we can fetch the
    value directory; avoiding slowing substitution logic when there's no
    '$' in the string.

  From Greg Noel:

  - Add construction variables to support frameworks on Mac OS X:
    $FRAMEWORKS, $FRAMEWORKPREFIX, $FRAMEWORKPATH, $FRAMEWORKPATHPREFIX.

  - Re-order link lines so the -o option always comes right after the
    command name.

  From Gary Oberbrunner:

  - Add an Environment.Dump() method to print the contents of a
    construction environment.

  - Allow $LIBS (and similar variables) to contain explicit File Nodes.

  - Change ParseConfig to add the found library names directly to the
    $LIBS variable, instead of returning them.

  - Add ParseConfig() support for the -framework GNU linker option.

  - Add a PRINT_CMD_LINE_FUNC construction variable to allow people
    to filter (or log) command-line output.
